--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <div class="todo-app" >
             <h2>To-Do List <img src="img/todoicon.png"> </h2>
             <div class="row">
-                <input type="text" id="input-box" placeholder="Add your text">
-                <button>Add</button>
+                <input type="text" id="input-box" placeholder="Shenoni taskun tuaj">
+                <button onclick="addTask()" >Shtoni</button>
             </div>
             <ul id="list-container">
                 <!-- <li class="checked">Task1</li>
@@ -21,7 +21,7 @@
             </ul>
         </div>
     </div>
-    
+
     <script src="script.js"></script>
 </body>
 </html>
